--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,14 @@ body {
   margin: 10px;
   position: relative;
 }
+.main .main__grid .grid__item1 .shadow {
+  position: absolute;
+  background-color: rgba(21, 24, 36, 0.5);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .main .main__grid .grid__item1 img {
   -o-object-fit: cover;
      object-fit: cover;
@@ -650,11 +658,9 @@ body {
 .main .main__sixcard .sixcard__items .item__link a:hover {
   background-color: #005ed8;
 }
-.main .main__video .video__item img {
+.main .main__video .video__item {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .footer {
